<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/help_activity_drawer_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/help_activity_app_bar_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fitsSystemWindows="true"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

      <androidx.appcompat.widget.Toolbar
      android:id="@+id/help_activity_toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/component_color_shared_activity_toolbar_color"
      android:minHeight="?attr/actionBarSize"
      app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/ToolbarTextAppearance" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <FrameLayout
        android:id="@+id/help_fragment_placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/component_color_shared_screen_tertiary_background_color" />

      <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@drawable/toolbar_drop_shadow" />
    </FrameLayout>
  </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>
