...
  <string name="play_exploration_button_text">Play exploration</string>
  <string name="help_activity_title">Help</string>
  <string name="bottom_sheet_options_menu_close">Close</string>
  <string name="menu_switch_profile">Switch Profile</string>
  <string name="developer_options">Developer Options</string>
  <string name="administrator_controls">Administrator Controls</string>
  <string name="drawer_open_content_description">Navigation Menu Open</string>
  <string name="drawer_close_content_description">Navigation Menu Close</string>
  <string name="audio_play_description">Play audio</string>
  <string name="audio_pause_description">Pause audio</string>
  <string name="audio_unavailable_in_selected_language">%s audio is unavailable.</string>
  <string name="audio_language_select_dialog_okay_button" tools:ignore="ButtonCase,Typos">Ok</string>
  <string name="audio_language_select_dialog_cancel_button">Cancel</string>
...
  <string name="sample_text_view_text">This is a sample text view</string>
  <string name="FAQs">FAQs</string>
  <string name="featured_questions">Featured Questions</string>
  <string name="frequently_asked_questions">Frequently Asked Questions</string>
  <string name="faq_activity_title">FAQs (Frequently Asked Questions)</string>
  <string name="onboarding_activity_title">Introduction</string>
  <string name="frequently_asked_questions_FAQ">Frequently Asked Questions (FAQs)</string>
  <string name="info">Info</string>
  <string name="learn">Learn</string>
  <string name="practice">Practice</string>
  <string name="study">Study</string>
  <string name="administrator_controls_title">Administrator Controls</string>
  <string name="topic_page">Topic page</string>
...
