<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.android.app.help.HelpListViewModel" />
  </data>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/help_fragment_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:list="@{viewModel.helpItemList}" />
</layout>
